bc updates